# rust_kgs_tracing

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/components/: base_metrics.rs  mod.rs  std_log_formatter.rs  telemetry_initializer.rs
src/components/tonic/: mod.rs  request_builder.rs
src/enums/: log_level.rs  mod.rs
src/middlewares/: mod.rs
src/middlewares/actix_web/: mod.rs  root_span_builder.rs  tracing_record.rs
src/middlewares/tonic/: mod.rs  root_span_builder.rs  tracing_record.rs
